# VRX-64

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  clean-build.sh  package-lock.json  package.json  playwright.config.js  tsconfig.json
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: smoke.yml
scripts/: smoke.sh
tests/: web-smoke.spec.js
